[tool.poetry]
name = "horizon"
version = "0.1.0"
description = ""
authors = ["mrudisel <mitchrudisel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
pydantic = "^2.6.4"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
